fix(docs): generate missing docs
